# fleet-management-system

./: .dockerignore  .env.production  .gitignore  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  __init__.py  capture_screenshot.py  cli.py  docker-compose.yml  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  simulator.py  test_api.py
.github/workflows/: ci-cd.yml  release.yml
api/: alerts.py  dashboard.py  telemetry.py  vehicles.py
config/: settings.py
models/: __init__.py  alert.py  database.py  driver.py  geofence.py  maintenance.py  telemetry.py  trip.py  vehicle.py
services/: tracking_service.py
telematics/: alert_engine.py  can_decoder.py  dtc_analyzer.py  gps_tracker.py  obd_reader.py
templates/: dashboard.html  fleet_map.html
